--- a/source/Q-Circuit-Editor-NEW.css
+++ b/source/Q-Circuit-Editor-NEW.css
@@ -105,14 +105,18 @@
 
 	position: relative;
 	width:  100%;
-	/*height: 30rem;*/
-	/*display: flex;*/
-	/*flex-direction: column;*/
-	/*user-select: none;*/
+}
+.Q-circuit-palette {
+
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 .Q-circuit {
 
 	margin: 1rem 0;
+	border-top: 1px solid hsl( 0, 0%, 20% );
 }
 .Q-circuit-board-foreground {
 	
@@ -127,6 +131,7 @@
 .Q-circuit-toolbar {
 
 	display: block;
+	display: none;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
@@ -328,6 +333,7 @@
 .Q-circuit-board-background .Q-circuit-cell-highlighted {
 
 	background-color: hsl( 0, 0%, 95% );
+	background-color: hsl( 0, 0%, 90% );
 }
 
 
@@ -338,7 +344,7 @@
 	top: calc( 50% - 0.5px );
 	width: 100%;
 	height: 1px;
-	background-color: hsl( 0, 0%, 66% );
+	background-color: hsl( 0, 0%, 50% );
 }
 
 
@@ -369,36 +375,14 @@
 	position: sticky;
 	z-index: 2;
 	margin: 0;
-	/*
-	border: 1px solid hsl(
-
-		var( --Q-color-base-hue ),
-		10%,
-		97%
-	);
-	border-right: 1px solid hsl(
-
-		var( --Q-color-base-hue ),
-		10%,
-		88%
-	);
-	border-bottom: 1px solid hsl(
-
-		var( --Q-color-base-hue ),
-		10%,
-		88%
-	);
-	*/
 	background-color: var( --Q-color-background );
 	color: hsl( 0, 0%, 80% );
 	font-family: var( --Q-font-family-mono );
-	/*line-height: 2.9rem;*/
-	/*text-shadow: 0.05rem 0.05rem 0 white;*/
 }
 .Q-circuit-input.Q-circuit-cell-highlighted,
 .Q-circuit-header.Q-circuit-cell-highlighted {
 
-	background-color: hsl( 0, 0%, 95% );
+	background-color: hsl( 0, 0%, 90% );
 	color: hsl( 0, 0%, 0% );
 }
 .Q-circuit-selectall {
@@ -417,7 +401,7 @@
 	grid-row: 1;
 	top: 0;
 	cursor: s-resize;
-	border-bottom: 1px solid hsl( 0, 0%, 95% );
+	border-bottom: 1px solid hsl( 0, 0%, 90% );
 }
 .Q-circuit-register-label,
 .Q-circuit-register-add {
@@ -425,7 +409,7 @@
 	grid-column: 2;
 	left: 4rem;
 	cursor: e-resize;
-	border-right: 1px solid hsl( 0, 0%, 95% );
+	border-right: 1px solid hsl( 0, 0%, 90% );
 }
 .Q-circuit-moment-add,
 .Q-circuit-register-add {
