--- a/source/Q-Circuit-Editor-NEW.css
+++ b/source/Q-Circuit-Editor-NEW.css
@@ -335,7 +335,6 @@
 }
 .Q-circuit-board-background .Q-circuit-cell-highlighted {
 
-	background-color: hsl( 0, 0%, 95% );
 	background-color: hsl( 0, 0%, 90% );
 }
 
@@ -459,6 +458,40 @@
 
 
 
+.Q-circuit-operation-link-container {
+
+	display: block;
+	position: relative;	
+	left:    50%;
+	width:  100%;
+	height: 200%;
+	overflow: hidden;
+}
+.Q-circuit-operation-link-container.Q-circuit-cell-highlighted {
+
+	background-color: transparent;
+}
+
+.Q-circuit-operation-link {
+
+	--Q-link-stroke: 1px;
+	--Q-link-radius: 90%;
+
+	box-sizing: content-box;
+	display: block;
+	position: absolute;
+	top:  calc( 2rem - ( var( --Q-link-stroke ) / 2 ));
+	left: calc(( var( --Q-link-radius ) / -2 ) - var( --Q-link-stroke ));
+	
+	border: var( --Q-link-stroke ) solid hsl( 0, 0%, 50% );
+	border-radius: 100%;
+	
+	width: calc( var( --Q-link-radius ) - var( --Q-link-stroke ));
+	height: calc( 50% - var( --Q-link-stroke ));
+}
+
+
+
 
     /******************/
    /*                */
@@ -533,6 +566,10 @@
 			rgba( 0, 0, 0, 0.05 )
 		)*/;
 }
+.Q-circuit-palette .Q-circuit-operation:hover {
+
+	background-color: rgba( 255, 255, 255, 0.6 );
+}
 .Q-circuit-palette .Q-circuit-operation-tile {
 
 	--Q-before-rotation: 12deg;
@@ -543,7 +580,7 @@
 	--Q-after-x: -2px;
 	--Q-after-y: 3px;
 	
-	box-shadow: 0.2rem 0.2rem 0.4rem rgba( 0, 0, 0, 0.5 );
+	box-shadow: 0.2rem 0.2rem 0.2rem rgba( 0, 0, 0, 0.2 );
 }
 .Q-circuit-palette .Q-circuit-operation-tile:before,
 .Q-circuit-palette .Q-circuit-operation-tile:after {
@@ -555,14 +592,14 @@
 	bottom: 0;
 	left:   0;
 	border-radius: 0.2rem;
-	background-color: hsl( 0, 0%, 50% );
+	background-color: hsl( 0, 0%, 60% );
 	transform: 
 		translate( var( --Q-before-x ), var( --Q-before-y ))
 		rotate( var( --Q-before-rotation ));		
 	z-index: -10;
 	/*z-index: 10;*/
 	display: block;
-	box-shadow: 0.2rem 0.2rem 0.4rem rgba( 0, 0, 0, 0.5 );
+	box-shadow: 0.2rem 0.2rem 0.2rem rgba( 0, 0, 0, 0.2 );
 }
 .Q-circuit-palette .Q-circuit-operation-tile:after {
 
@@ -632,10 +669,6 @@
 
 	outline: 1px solid black;
 	outline-offset: -1px;
-}
-.Q-circuit-palette > div:hover {
-
-	background-color: rgba( 255, 255, 255, 0.5 );
 }
 .Q-circuit-palette > div:hover .Q-circuit-operation-tile {
 
